--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,41 @@
+# Telegram Bot
 python-telegram-bot==21.6
+
+# HTTP Client
 httpx>=0.27
+
+# Environment & Configuration
 python-dotenv>=1.0
+pydantic>=2.8
+pydantic-settings>=2.5
+
+# Data Processing
 pandas>=2.2
 openpyxl>=3.1
 pyarrow>=15.0
+
+# LLM & AI
 openai>=1.40.0
 tiktoken>=0.7.0
-pydantic>=2.8
+pydantic-ai>=0.0.14
+
+# Local LLM Support
+ollama>=0.1.0  # Optional: for Ollama integration
+
+# Machine Learning (для анализа)
+scikit-learn>=1.3.0
+
+# Utilities
+tqdm>=4.66.0
+rich>=13.7.0
+
+# Async
+asyncio>=3.4.3
+aiofiles>=23.2.0
+
+# Logging & Monitoring
+loguru>=0.7.0
+
+# Testing (optional)
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
